2022-09-07  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* lib/xtime.py:

	  - Time operations on rp2 platforms are now offset correctly to
	    embedded epoch (2000/01/01).

	  - New module constant: EPOCH_OFFSET.

	  - Tidy up to ensure everything works on ports that use unix
	    epoch and on ports that use embedded epoch.


2022-09-06  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* apps/clock_sensor/clock_sensor_esp32.py:

	  - Webserver text is now defined by the WEBSRV_TEMPLATE config param.

	    Template variables:

	    - %TS%: seconds since epoch, XXXXXXXXXX
	    - %Sn_HUMI%: sensor n humidity, XXX.XXX
	    - %Sn_TEMP%: sensor n temperature, +XX.XXX
	    - %Sn_PRES%: sensor n pressure, XXXX.XXX

	* conf/clock_sensor/clock_sensor_esp32.conf:
	* conf/clock_sensor/clock_sensor_esp8266.conf:
	* conf/clock_sensor/clock_sensor_picow.conf:

	  - Added: WEBSRV_TEMPLATE


2022-09-06  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* apps/clock_sensor/clock_sensor_esp32.py:

	  - Display lines are now defined by the DISPLAY_TEMPLATE config param.
	    Lines are colon separated.

	    Template variables:

	      - %LDATE%: long date, DD/MM/YYYY
	      - %SDATE%: short date, DD/MM/YY
	      - %TIME%: time, HH:MM:SS
	      - %Sn_HUMI%: sensor n humidity, XXX.X%
	      - %Sn_TEMP%: sensor n temperature, +XX.XC
	      - %Sn_PRES%: sensor n pressure, XXXX.XhPa
	      - %NBSP%: space
	      - %COLON%: colon

	* conf/clock_sensor/clock_sensor_esp32.conf:
	* conf/clock_sensor/clock_sensor_esp8266.conf:
	* conf/clock_sensor/clock_sensor_picow.conf:

	  - Removed: DISPLAY_MODE
	  - Added: DISPLAY_TEMPLATE


2022-09-03  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* apps/clock_sensor/clock_sensor_esp32.py:

	  - Factored out duplicated code into a lot of class hierarchies. New
	    code is too big to run on an ESP8266, but will fix that soon.

	* conf/clock_sensor/clock_sensor_esp32.conf
	* conf/clock_sensor/clock_sensor_esp8266.conf